--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -1,140 +1,143 @@
 .item-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 3rem;
-    margin-left: -2rem;
-    padding: 2rem 0rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 3rem;
+  margin-left: -2rem;
+  padding: 2rem 0rem;
 }
 
 .item {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    flex-direction: column;
-    box-shadow: 0.2rem 0.5rem 0.5rem black;
-    border-radius: 1rem;
-    width: 18rem;
-
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  flex-direction: column;
+  box-shadow: 0.2rem 0.5rem 0.5rem black;
+  border-radius: 1rem;
+  width: 18rem;
 }
 
-.item-image img{
-    width: 18rem;
-    height:auto;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+.item-image img {
+  width: 18rem;
+  height: auto;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .item-details {
-    display: flex;
-    flex-direction: column;
-    align-items: initial;
-    justify-content: center;
-    width: 17rem;
-    margin-top: -2rem;
-    background-color: #E5FFE6;
-    border-radius: 1rem;
-    padding: 1rem 0rem 1rem 1rem;
-    height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: initial;
+  justify-content: center;
+  width: 17rem;
+  margin-top: -2rem;
+  background-color: #e5ffe6;
+  border-radius: 1rem;
+  padding: 1rem 0rem 1rem 1rem;
+  height: auto;
 }
 
-.item-details > p,  .item-details > button {
-    margin-top: 0.03rem;
+.item-details > p,
+.item-details > .button {
+  margin-top: 0.03rem;
 }
 
 .price-cart {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 2rem;
 }
 
-.item-details button, .item-action button {
-    border-radius: 0.8rem;
-    padding: 0.6rem;
-    max-width: 6rem;
-    height: auto;
-    border: none;
-    box-shadow: 0.1rem 0.2rem 0.4rem black;
-    font-weight: bolder;
-    font-size: 0.8rem;
+.item-details .button,
+.item-action .button {
+  border-radius: 0.8rem;
+  padding: 0.6rem;
+  max-width: 6rem;
+  height: auto;
+  border: none;
+  box-shadow: 0.1rem 0.2rem 0.4rem black;
+  font-weight: bolder;
+  font-size: 0.8rem;
 }
 
-.item-details button:hover, .item-action button:hover {
-    box-shadow: 0.2rem 0.4rem 0.6rem black;
+.item-details .button:hover,
+.item-action .button:hover {
+  box-shadow: 0.2rem 0.4rem 0.6rem black;
 }
 
 .cart-item {
-    margin: 2px 0px 2px 0px;
-    padding: 8px 0px 8px 0px;
-    border-bottom: 1px solid #2ba933;
+  margin: 2px 0px 2px 0px;
+  padding: 8px 0px 8px 0px;
+  border-bottom: 1px solid #2ba933;
 }
 
 .cart-item img {
-    width: 8rem;
-    height: 6rem;
-    border-radius: 0.8rem;
+  width: 8rem;
+  height: 6rem;
+  border-radius: 0.8rem;
 }
 
 .cart-item button {
-    border-radius: 50%;
-    padding: 0.6rem;
-    border: none;
-    box-shadow: 0.1rem 0.2rem 0.4rem black;
-    font-size: 0.8rem;
+  border-radius: 50%;
+  padding: 0.6rem;
+  border: none;
+  box-shadow: 0.1rem 0.2rem 0.4rem black;
+  font-size: 0.8rem;
 }
 
 .cart-item-list {
-    overflow-x:hidden;
-    overflow-y: auto; /* Vertical scrollbar for cart */
-    height: 60vh;
+  overflow-x: hidden;
+  overflow-y: auto; /* Vertical scrollbar for cart */
+  height: 60vh;
 }
 
-
 .cart-item-detail {
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    column-gap: 2rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  column-gap: 2rem;
 }
 
 .cart-item-cost-detail {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-items: center;
-    column-gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
 }
 
-.cart-item-cost-detail button {
-    padding: 0.6rem;
-    border: none;
-    box-shadow: none;
-    font-size: 1.5rem;
-    background-color: transparent;
+.cart-item-cost-detail .button {
+  padding: 0.6rem;
+  border: none;
+  box-shadow: none;
+  font-size: 1.5rem;
+  background-color: transparent;
 }
 
 .cart-item-qty {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    column-gap: 0.8rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  column-gap: 0.8rem;
 }
 
-.item-action-btn, .item-total, .my-cart {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.item-action-btn,
+.item-total,
+.my-cart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .my-cart {
-    font-family: "Dancing Script", cursive;
-    font-optical-sizing: auto;
-    font-weight: bolder;
-    font-size: 2rem;
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: bolder;
+  font-size: 2rem;
 }
 
-.item-action-btn button {
-    width: 40rem;
-    font-size: 1rem;
-    font-weight: bolder;
+.item-action-btn .button {
+  width: 40rem;
+  font-size: 1rem;
+  font-weight: bolder;
 }
