--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-style: normal;
-  background-color: #eaf7ea;
+  background-color: #faeed7;
 }
