--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -1,9 +1,9 @@
 .item-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 3rem;
-  margin-left: -2rem;
-  padding: 2rem 0rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2.5rem;
 }
 
 .item {
@@ -13,11 +13,11 @@
   flex-direction: column;
   box-shadow: 0.2rem 0.5rem 0.5rem black;
   border-radius: 1rem;
-  width: 18rem;
+  width: 16rem;
 }
 
 .item-image img {
-  width: 18rem;
+  width: 16rem;
   height: auto;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -28,7 +28,7 @@
   flex-direction: column;
   align-items: initial;
   justify-content: center;
-  width: 17rem;
+  width: 15rem;
   margin-top: -2rem;
   background-color: #faeed7;
   border-radius: 1rem;
@@ -73,9 +73,9 @@
 }
 
 .cart-item img {
-  width: 8rem;
-  height: 6rem;
-  border-radius: 0.8rem;
+  width: 8em;
+  height: 6em;
+  border-radius: 0.8em;
 }
 
 .cart-item button {
@@ -95,9 +95,9 @@
 
 .cart-item-detail {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
-  column-gap: 2rem;
+  gap: 4.5em;
 }
 
 .cart-item-cost-detail {
@@ -105,7 +105,7 @@
   grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
-  column-gap: 1rem;
+  width: 3.2em;
 }
 
 .cart-item-cost-detail .button {
@@ -120,7 +120,6 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  column-gap: 0.8rem;
 }
 
 .item-action-btn,
@@ -142,4 +141,115 @@
   width: 40rem;
   font-size: 1rem;
   font-weight: bolder;
+}
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 2rem;
+  width: 2rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  .cart {
+    width: 18em;
+  }
+
+  .my-cart-heading {
+    font-size: 1.4rem;
+  }
+
+  .header {
+    font-size: 1rem;
+    margin: 0;
+  }
+
+  .product {
+    margin: 0;
+  }
+}
+
+
+@media only screen and (max-width: 620px) {
+  .item-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+
+  .btn-mobile-nav {
+    display: block;
+    z-index: 99999;
+  }
+
+  .cart {
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease-in;
+
+    opacity: 0;
+
+    pointer-events: none;
+
+    visibility: hidden;
+  }
+
+  .nav-open .cart {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  .my-cart {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    column-gap: 8rem;
+    margin-top: -4rem;
+    margin-left: 4rem;
+    position: sticky;
+  }
+
+  .cart-item {
+    width: 20em;
+  }
+
+  .cart-item-detail {}
+
+  .item-action-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4rem;
+  }
 }
